week 4 - added movies page

--- a/fan-site/styles/styles.css
+++ b/fan-site/styles/styles.css
@@ -1,8 +1,19 @@
-body {
+body.home {
     background-image: url('../images/background.jpg');
 }
 
+body.about {
+    background-image: url('../images/background.jpg');
+}
 
+body.quotes {
+    background-image: url('../images/background.jpg');
+}
+
+body.ranks {
+    background-color: black;
+    /*background-image: url('../images/background.jpg');*/
+}
 
 a {
     color:white;
@@ -31,3 +42,38 @@ div.nav {
 div.red {
     background-color: red;
 }
+
+div.row {
+    margin: auto;
+    background-color: red;
+    height: 350px; 
+    width: 50%;
+    border-style: solid;
+}
+
+div.movie {
+    width: 40%;
+    height: 100%;
+    float: left;
+    text-align: center;    
+}
+
+img.movie {
+    padding-top: 25px;
+}
+
+h2.movie {
+    padding-top: 140px;
+}
+
+div.desc {
+    width: 60%;
+    height: 100%;
+    float: left;
+    text-align: center;
+}
+
+h1 {
+    color: red;
+}
+
