- standardize nav - week 2 started

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -48,6 +48,10 @@ pre {
     color: white;
 }
 
+ul {
+    color: white;
+}
+
 .list-group-mine .list-group-item {
     background-color: #212529;
     color: #ffffff;
